--- a/CloneAllRepos/appsettings.json
+++ b/CloneAllRepos/appsettings.json
@@ -1,7 +1,4 @@
 ﻿{
-  "targetDirectory": "~/git",
-  "reposToClone": [
-    "git@github.com:codemonkey85/pcsx2.git",
-    "git@github.com:codemonkey85/PKHeX.git"
-  ]
+  "targetDirectory": "C:\\Git",
+  "githubUserName": "codemonkey85"
 }
