--- a/CloneAllRepos/CloneAllRepos.csproj
+++ b/CloneAllRepos/CloneAllRepos.csproj
@@ -2,9 +2,10 @@
 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<LangVersion>preview</LangVersion>
 		<UserSecretsId>96a99f2a-352e-4a43-84f4-19e98cc30a61</UserSecretsId>
 	</PropertyGroup>
 
