--- a/.editorconfig
+++ b/.editorconfig
@@ -228,6 +228,7 @@ resharper_normalize_tag_names = true
 
 # ReSharper inspection severities
 resharper_arrange_local_function_body_highlighting = suggestion
+csharp_style_prefer_top_level_statements = true:suggestion
 
 [*.{cs,vb}]
 dotnet_style_operator_placement_when_wrapping = beginning_of_line
