Fix static method

--- a/CloneAllRepos/appsettings.json
+++ b/CloneAllRepos/appsettings.json
@@ -1,4 +1,4 @@
 ﻿{
-  "targetDirectory": "C:\\Git",
-  "githubUserName": "codemonkey85"
+  "githubUserName": "codemonkey85",
+  "targetDirectory": "C:\\Git"
 }
