--- a/CloneAllRepos/CloneAllRepos.csproj
+++ b/CloneAllRepos/CloneAllRepos.csproj
@@ -4,7 +4,6 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<LangVersion>preview</LangVersion>
 		<OutputType>Exe</OutputType>
 		<UserSecretsId>96a99f2a-352e-4a43-84f4-19e98cc30a61</UserSecretsId>
 	</PropertyGroup>
@@ -20,8 +19,8 @@
 		</Content>
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0-rc.2.23479.6" />
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-rc.2.23479.6" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="Octokit" Version="9.0.0" />
 	</ItemGroup>
 </Project>
