--- a/CloneAllRepos/CloneAllRepos.csproj
+++ b/CloneAllRepos/CloneAllRepos.csproj
@@ -22,5 +22,6 @@
 		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
 		<PackageReference Include="Octokit" Version="13.0.1" />
+		<PackageReference Include="System.Text.Json" Version="8.0.4" />
 	</ItemGroup>
 </Project>
