Use config binding, only clone approved owners' repos

--- a/CloneAllRepos/appsettings.json
+++ b/CloneAllRepos/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "personalAccessToken": "",
   "githubUserName": "",
-  "targetDirectory": ""
+  "targetDirectory": "",
+  "ownersToInclude": [
+  ]
 }
